dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kuberneties.io/ingress.class: "kong"
    konghq.com/preserve-host: "true"
#    konghq.com/strip-path: "true"
spec:
  rules:
    - host: dashboard.kubernetes.infiquetra.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443

#---
#apiVersion: configuration.konghq.com/v1
#kind: KongIngress
#metadata:
#  name: kubernetes-dashboard
#  namespace: kubernetes-dashboard
#  labels:
#    app: kubernetes-dashboard
#proxy:
#  protocol: https
#route:
#  strip_path: true
